# opengl_learning

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  fragment_shader.glsl  geometry_shader.glsl  main.cpp  subdivision_controller.glsl  subdivision_evaluator.glsl  vertex_shader.glsl
lib/: glfw3.lib  glfw3_d.lib  sb7.lib  sb7_d.lib
